Fix animation glitch for bin page (create base for future implementation, refactor code by the way)

--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -16,7 +16,7 @@
             android:padding="@dimen/item_container_space"
             android:weightSum="1">
 
-            <!--TODO change size for another screens-->
+            <!--TODO change size for another screen sizes-->
             <sgtmelon.iconanim.widget.SwitchButton
                 android:id="@+id/visible_button"
                 style="@style/Button.Medium"
@@ -110,7 +110,7 @@
 
             </LinearLayout>
 
-            <!--TODO change size for another screens-->
+            <!--TODO change size for another screen sizes-->
             <ImageButton
                 android:id="@+id/cancel_button"
                 style="@style/Button.Medium"
