--- a/app/src/main/res/drawable/bg_progress.xml
+++ b/app/src/main/res/drawable/bg_progress.xml
@@ -3,7 +3,7 @@
 
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/clDisable" />
+            <solid android:color="?attr/clContrast" />
         </shape>
     </item>
 
