--- a/app/src/main/res/layout/inc_note_panel.xml
+++ b/app/src/main/res/layout/inc_note_panel.xml
@@ -60,7 +60,7 @@
                     style="@style/Button.Small"
                     android:contentDescription="@string/description_note_undo"
                     app:srcCompat="@drawable/ic_undo"
-                    app:tint="?attr/clContrast"
+                    app:tint="?attr/clContentThird"
                     tools:tint="?attr/clContent" />
 
                 <ImageButton
@@ -68,8 +68,8 @@
                     style="@style/Button.Small"
                     android:contentDescription="@string/description_note_redo"
                     app:srcCompat="@drawable/ic_redo"
-                    app:tint="?attr/clContrast"
-                    tools:tint="?attr/clContrast" />
+                    app:tint="?attr/clContentThird"
+                    tools:tint="?attr/clContentThird" />
 
                 <ImageButton
                     android:id="@+id/rank_button"
@@ -95,7 +95,7 @@
                 <Button
                     android:id="@+id/save_button"
                     style="@style/Button.Small"
-                    android:textColor="?attr/clContrast"
+                    android:textColor="?attr/clContentThird"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:text="@string/button_note_save" />
 
