--- a/app/src/main/res/layout/inc_roll_add_panel.xml
+++ b/app/src/main/res/layout/inc_roll_add_panel.xml
@@ -51,7 +51,7 @@
                     android:layout_gravity="bottom"
                     android:contentDescription="@string/description_enter_roll_add"
                     app:srcCompat="@drawable/ic_add"
-                    app:tint="?attr/clContrast"
+                    app:tint="?attr/clContentThird"
                     tools:tint="?attr/clAccent" />
 
             </LinearLayout>
